# mrg_slam_static_keyframe_provider

./: CMakeLists.txt  README.md  package.xml
config/: map_provider.yaml  static_keyframe_provider.yaml
include/mrg_slam_map_provider/: MapProviderComponent.hpp
include/mrg_slam_static_keyframe_provider/: StaticKeyFrameProviderComponent.hpp
launch/: map_provider.launch.py  static_keyframe_provider.launch.py
maps/: marsyard2020_100000_points.pcd
src/: MapProviderComponent.cpp  MapProviderNode.cpp  StaticKeyFrameProviderComponent.cpp  StaticKeyFrameProviderNode.cpp
